# AnimalProcessingRoutines

./: README.md  SConstruct
CellTracking/: CMakeLists.txt  README.md
CellTracking/header/: correspondancecouple.h  couple.h  tools.h  trackingfunction.h  trackingincludes.h
CellTracking/source/: SConscript  correspondancecouple.cpp  couple.cpp  tools.cpp  tracking.cpp  trackingfunction.cpp
EpitheliumProjection/: CMakeLists.txt  README.md
EpitheliumProjection/include/: LocalPeakDetection1D.h  LocalPeakDetection1D.hxx  itkImageProjectionFromTopologicalMapFilter.h  itkImageProjectionFromTopologicalMapFilter.hxx  itkMultiscaleVolumeToTopologicalDepthMapFilter.h  itkMultiscaleVolumeToTopologicalDepthMapFilter.hxx  itkVolumeDataToTopologicalDepthMapFilter.h  itkVolumeDataToTopologicalDepthMapFilter.hxx
EpitheliumProjection/zmapGeneration/: CMakeLists.txt  SConscript  main.cpp
EpitheliumProjection/zmapProjection/: CMakeLists.txt  SConscript  main.cpp
JunctionTracking/: CMakeLists.txt  README.md
JunctionTracking/header/: border.h  bordertracking.h  cell.h  intensityV.h  pixel.h  skelpix.h  tools.h
JunctionTracking/source/: SConscript  border.cpp  bordertracking.cxx  cell.cpp  intensityV.cpp  pixel.cpp  skelpix.cpp  tools.cc  tools.cpp  toolsCC.cpp
SegmentedImageAnalysis/: CMakeLists.txt  README.md
SegmentedImageAnalysis/header/: Cell.h  Junction.h  Matfile.h  Utility.h  Vertex.h
SegmentedImageAnalysis/source/: Cell.cpp  Junction.cpp  SConscript  Vertex.cpp  main.cpp
